--- a/index.html
+++ b/index.html
@@ -336,6 +336,9 @@ const respostas = {
   // PRODUTOS ESPECÍFICOS
   "câmera": "Temos várias câmeras de segurança! 📹\n• Câmera Externa 2 em 1: R$ 209,90\n• Câmera Wi-Fi 360°: R$ 149,90\n• Câmera Lâmpada: R$ 119,90\n• Câmera Espiã: R$ 59,90\n\nQual te interessa mais?",
   "camera": "Temos várias câmeras de segurança! 📹\n• Câmera Externa 2 em 1: R$ 209,90\n• Câmera Wi-Fi 360°: R$ 149,90\n• Câmera Lâmpada: R$ 119,90\n• Câmera Espiã: R$ 59,90\n\nQual te interessa mais?",
+  "wifi": "Temos várias câmeras Wi-Fi! 📹\n• Câmera Externa 2 em 1: R$ 209,90\n• Câmera Wi-Fi 360°: R$ 149,90\n• Câmera Lâmpada: R$ 119,90\n• Câmera Espiã: R$ 59,90\n\nQual te interessa mais?",
+  "seguranca": "Temos várias câmeras de segurança! 📹\n• Câmera Externa 2 em 1: R$ 209,90\n• Câmera Wi-Fi 360°: R$ 149,90\n• Câmera Lâmpada: R$ 119,90\n• Câmera Espiã: R$ 59,90\n\nQual te interessa mais?",
+  "segurança": "Temos várias câmeras de segurança! 📹\n• Câmera Externa 2 em 1: R$ 209,90\n• Câmera Wi-Fi 360°: R$ 149,90\n• Câmera Lâmpada: R$ 119,90\n• Câmera Espiã: R$ 59,90\n\nQual te interessa mais?",
   "controle": "Temos controles de portão! 🚗\n• Controle TOK: R$ 37,90\n• Controle ZAP POP: R$ 34,90\n• Clonador: R$ 49,90\n• Kit com 2: R$ 94,90\n\nPrecisa de qual?",
   "videogame": "Temos consoles e controles! 🎮\n• Video game Stick: R$ 139,90\n• Console Portátil: R$ 249,90\n• Super Nintendo: R$ 99,90\n• Controle PS4: a partir de R$ 99,90\n\nQual você quer?",
   "fechadura": "Temos fechaduras inteligentes! 🔐\n• IDALI LIFE Wi-Fi: R$ 569,90\n• Tuya: R$ 549,90\n• IDALI LIFE Madeira: R$ 599,90\n• Digital 4 em 1: R$ 499,90\n\nQual modelo te atrai?",
@@ -352,10 +355,10 @@ const respostas = {
   "forma de pagamento": "💳 Aceitamos: \n• PIX (5% de desconto)\n• Cartão de crédito\n• Boleto bancário\n• Transferência",
   
   // SUPORTE E CONTATO
-  "contato": "📞 WhatsApp: (11) 99999-9999\n📧 Email: contato@tecnologiads.com.br\n💬 Ou use nosso formulário de contato!",
-  "whatsapp": "📞 Nosso WhatsApp: (11) 99999-9999\nFale diretamente conosco!",
+  "contato": "📞 WhatsApp: (85) 981339545\n📧 Email: contato@tecnologiads.com.br\n💬 Ou use nosso formulário de contato!",
+  "whatsapp": "📞 Nosso WhatsApp: (85) 981339545\nFale diretamente conosco!",
   "email": "📧 Email: contato@tecnologiads.com.br\nRespondemos em até 24h!",
-  "suporte": "🛠️ Suporte técnico:\n• WhatsApp: (11) 99999-9999\n• Email: suporte@tecnologiads.com.br\n• Tutoriais em vídeo disponíveis",
+  "suporte": "🛠️ Suporte técnico:\n• WhatsApp: (85) 981339545\n• Email: suporte@tecnologiads.com.br\n• Tutoriais em vídeo disponíveis",
   
   // SAUDAÇÕES
   "ola": "👋 Olá! Sou o assistente da Tecnologia DS! Posso ajudar com:\n• Informações sobre produtos\n• Preços e promoções\n• Prazos de entrega\n• Formas de pagamento\n\nComo posso te ajudar?",
