--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tecnologia DS - Seu Futuro Conectado</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -334,6 +334,7 @@
 <script>
 const respostas = {
   // PRODUTOS ESPECÍFICOS
+  "cameras": "Temos várias câmeras de segurança! 📹\n• Câmera Externa 2 em 1: R$ 209,90\n• Câmera Wi-Fi 360°: R$ 149,90\n• Câmera Lâmpada: R$ 119,90\n• Câmera Espiã: R$ 59,90\n\nQual te interessa mais?",
   "câmera": "Temos várias câmeras de segurança! 📹\n• Câmera Externa 2 em 1: R$ 209,90\n• Câmera Wi-Fi 360°: R$ 149,90\n• Câmera Lâmpada: R$ 119,90\n• Câmera Espiã: R$ 59,90\n\nQual te interessa mais?",
   "camera": "Temos várias câmeras de segurança! 📹\n• Câmera Externa 2 em 1: R$ 209,90\n• Câmera Wi-Fi 360°: R$ 149,90\n• Câmera Lâmpada: R$ 119,90\n• Câmera Espiã: R$ 59,90\n\nQual te interessa mais?",
   "wifi": "Temos várias câmeras Wi-Fi! 📹\n• Câmera Externa 2 em 1: R$ 209,90\n• Câmera Wi-Fi 360°: R$ 149,90\n• Câmera Lâmpada: R$ 119,90\n• Câmera Espiã: R$ 59,90\n\nQual te interessa mais?",
@@ -677,8 +678,6 @@ const respostas = {
     <a href="#" class="btn-primary inline-block mt-12">Ver Todos os Tutoriais</a>
   </div>
 </section>
-
-<!-- Seção de Contato -->
 <!-- Seção de Contato -->
 <section id="contato" class="py-20 bg-gray-900 px-4">
   <div class="container mx-auto text-center">
